--- a/MY_APPLICATION/Web.config
+++ b/MY_APPLICATION/Web.config
@@ -48,9 +48,51 @@
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
 
+   <!--
     <authentication mode="Forms">
       <forms loginUrl="~/Other/Login"/>
     </authentication>
+   -->
+    <!-- Belongs to Areas.SimpleSecurity Area-->
+    <authentication mode="Forms">
+      <!--Wrong Usage
+      <forms loginUrl="~/Areas/SimpleSecurity/Account/Login" defaultUrl="~/Areas/SimpleSecurity/Home/Index"/>
+      -->
+      <forms loginUrl="~/SimpleSecurity/Account/Login" defaultUrl="~/SimpleSecurity/Home/Index"/>
+    </authentication>
+
+    <!-- ************************************************** -->
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Content/Errors/Error.html" redirectMode="ResponseRedirect">
+      <error statusCode="400" redirect="~/Content/Errors/Error_400.html"/>
+      <error statusCode="404" redirect="~/Content/Errors/Error_404.html"/>
+      <error statusCode="408" redirect="~/Content/Errors/Error_408.html"/>
+      <error statusCode="500" redirect="~/Content/Errors/Error_500.html"/>
+      <error statusCode="505" redirect="~/Content/Errors/Error_505.html"/>
+    </customErrors>
+    <!-- ************************************************** -->
+
+    <!-- ************************************************** -->
+    <!-- domain="" -->
+    <!-- cookiePath="/" -->
+    <!-- enabled="false" -->
+    <!-- cookieTimeout="30" -->
+    <!-- maxCachedResults="25" -->
+    <!-- cookieProtection="All" -->
+    <!-- cookieName=".ASPXROLES" -->
+    <!-- cookieRequireSSL="false" -->
+    <!-- cacheRolesInCookie="false" -->
+    <!-- createPersistentCookie="false" -->
+    <!-- cookieSlidingExpiration="true" -->
+    <!-- defaultProvider="AspNetSqlRoleProvider" -->
+    <roleManager enabled="true" defaultProvider="DtxRoleProvider" cookieName="cd6f86b0-de3c-417d-9003-7b84ec0859e3">
+      <providers>
+        <clear/>
+        <add name="DtxRoleProvider" type="Infrastracture.RoleProvider" description="Dtx Role Provider" connectionStringName="MyConnectionString"/>
+      </providers>
+    </roleManager>
+    <!-- ************************** type should be equal with "Infrastructure.RoleProvider" ************************ -->
+   
+       
     
   </system.web>
   
