--- a/Rlx/Rlx.csproj
+++ b/Rlx/Rlx.csproj
@@ -34,9 +34,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constant.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegularExpressions.cs" />
+    <Compile Include="Text.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
